--- a/web/Dockerfile.dev
+++ b/web/Dockerfile.dev
@@ -1,24 +1,28 @@
-# Dockerfile
+ FROM python:3.11.2-slim-bullseye AS builder
 
-FROM python:3.11.2-slim-bullseye AS builder
+ RUN apt-get update && \
+     apt-get upgrade --yes
 
-FROM python:3.11.2-slim-bullseye
+ RUN useradd --create-home realpython
+ USER realpython
+ WORKDIR /home/realpython
 
-RUN apt-get update && \
-    apt-get upgrade --yes
+ ENV VIRTUALENV=/home/realpython/venv
+ RUN python3 -m venv $VIRTUALENV
+ ENV PATH="$VIRTUALENV/bin:$PATH"
 
-RUN useradd --create-home realpython
-USER realpython
-WORKDIR /home/realpython
+ COPY --chown=realpython pyproject.toml constraints.txt ./
+ RUN python -m pip install --upgrade pip setuptools && \
+     python -m pip install --no-cache-dir -c constraints.txt ".[dev]"
 
-ENV VIRTUALENV=/home/realpython/venv
-RUN python3 -m venv $VIRTUALENV
-ENV PATH="$VIRTUALENV/bin:$PATH"
+ COPY --chown=realpython src/ src/
+ COPY --chown=realpython test/ test/
 
-COPY --from=builder /home/realpython/dist/page_tracker*.whl /home/realpython
-
-RUN python -m pip install --upgrade pip setuptools && \
-    python -m pip install --no-cache-dir -c constraints.txt ".[dev]"
-
-CMD ["flask", "--app", "page_tracker.app", "run", \
-     "--host", "0.0.0.0", "--port", "5000"]
+ RUN python -m pip install . -c constraints.txt && \
+     python -m pytest test/unit/ && \
+     python -m flake8 src/ && \
+     python -m isort src/ --check && \
+     python -m black src/ --check --quiet && \
+     python -m pylint src/ --disable=C0114,C0116,R1705 && \
+     python -m bandit -r src/ --quiet && \
+     python -m pip wheel --wheel-dir dist/ . -c constraints.txt
